Changes for 0.6.0:

* Fixed issue #23: ra::environment::getEnvironmentVariables().
* Fixed issue #31: ra::environment::expand()

Changes for 0.5.0:

* New feature: Implemented ra::strings::trim() and ra::strings::reverse().
* New feature: Implemented console text color support.
* New feature: Implemented ra::filesystem::isAbsolutePath(), resolvePath(), getAbsolutePathFromExecutable() and getAbsolutePathFromCurrentDirectory().
* New feature: Implemented ra::environment::setEnvironmentVariable().
* New feature: Created `generics` namespace, a.k.a. popular templates.
* New feature: Created `console` namespace.
* New feature: Created `process` namespace.
* New feature: Normalized floating point values conversion to string: toStringLossless(), toStringLossy() or toStringFormatted().
* Fixed issue  #5: String format function.
* Fixed issue  #6: Implement getCurrentProcessPath() function.
* Fixed issue  #7: Function for absolute path to relative path.
* Fixed issue #11: joinString() fails if first element of list is an empty string.
* Fixed issue #12: Rename `strReplace()` to `replace()`.
* Fixed issue #13: Rename `parseValue()` to `parse()`.
* Fixed issue #14: Rename `splitString()` to `split()` and `joinString()` to `join()`.

Changes for 0.4.1:

* Fixed Travis CI scripts which was using `mkdir` to use the `-p` argument to not fail in directory already exists.

Changes for 0.4.0:

* New feature: Added support for doxygen API documentation. See build option `RAPIDASSIST_BUILD_DOC` for details.
* New feature: Implemented 'make install' command support (issue #2).
* Fixed documentation for some functions.
* Removed all submodule dependencies. Now manually downloading dependencies using scripts.
* New feature: Create build option for disabling dependency to GTest (issue #3)
* New feature: License header in all files (issue #4)

Changes for 0.3.4:

* Fixed incorrect product version in v0.3.3

Changes for 0.3.3:
